# motorq-assignment

./: .env  pyproject.toml
motorq/: config.py  db.py  deps.py  main.py  redis_client.py
motorq/api/: __init__.py  organization_api.py  vehicle_api.py
motorq/crud/: crud_organization.py
motorq/helper/: decode_vin.py
motorq/models/: __init__.py  organizations.py  vehicles.py
motorq/schemas/: organizations.py  vehicles.py
